syntax = "proto3";
package proto;

option go_package = "./proto";

message P2PError{
  string message = 1;
}

message  P2PLatestBlockHeightRequestMessge {
  string blockHieght = 1;
  bytes blockhash =2;
}

message  P2PLatestBlockHeightResponseMessage {
  string blockHieght = 1;
  bytes blockhash =2;
}

message  BlockInfo {
  bytes blockhash =2;
  bytes previousHash = 3;
  bytes megablock = 4;
  bytes metblock = 5;
  uint64 nonce= 6;
  uint64 blockheight =1;
  int64 timestamp = 7;
  bytes currentHash = 8;
  uint64 bits = 9;
  repeated blockTransactions transactions =10;

}

message BlockWithTrustedDataMessage {
  repeated BlockInfo BlockInfo = 1;
}

message P2PBlockWithTrustedDataRequestMessage {
  repeated BlockInfo BlockInfo = 1;
}

message P2PBlockWithTrustedDataResponseMessage {
  repeated BlockInfo BlockInfo = 1;
  P2PError P2PMessage = 2;
}

message blockTransactions {
  string sender =1;
  string recipient =2;
  int64 txtype = 3;
  string value = 4;
  bytes txhash = 5;
  int64 timestamp = 6;
  int64 txstatus = 7;
}

